# ELC

./: Documentation_Milestone_1.md  InkConfiguration.md  README.md  Testing Guide.md  package-lock.json  package.json
ELC/: Cargo.toml  lib.rs
artifacts/: elc.contract  elc.json  oracle.contract  oracle.json  pool.contract  pool.json  relp.contract  relp.json
contracts/elc/: Cargo.toml  lib.rs
contracts/oracle/: Cargo.toml  lib.rs
contracts/pool/: Cargo.toml  lib.rs
contracts/relp/: Cargo.toml  lib.rs
elc/: Cargo.toml  lib.rs
libs/ownership/: lib.rs
oracle/: Cargo.toml  lib.rs
pool/: Cargo.toml  lib.rs
rELP/: Cargo.toml  lib.rs
relp/: Cargo.toml  lib.rs
scripts/: elc.call.ts  elc.deploy.ts
tests/: elc.display.ts  elc.ownertest.ts  elc.test.ts  pub.parameter.ts  relp.test.ts  test.addliquidity.ts  test.contract.ts  test.expand.ts  test.getreward.ts  test.removeliquidity.ts
