[package]
name = "pool"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }

elc = { version = "0.1.0", path = "../elc", default-features = false, features = ["ink-as-dependency"]}
relp = { version = "0.1.0", path = "../relp", default-features = false, features = ["ink-as-dependency"]}
oracle = { version = "0.1.0", path = "../oracle", default-features = false, features = ["ink-as-dependency"]}

factory = { version = "0.1.0", path = "../../store-contracts/contracts/patraswap", default-features = false, features = ["ink-as-dependency"]}
exchange2 = { version = "0.1.0", path = "../../store-contracts/contracts/patraswap/exchange2", default-features = false, features = ["ink-as-dependency"]}

[lib]
name = "pool"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "elc/std",
    "relp/std",
    "oracle/std",
    "factory/std",
	"exchange2/std",
	
]
ink-as-dependency = []
